[gd_scene load_steps=4 format=3 uid="uid://b54d40xul4t18"]

[ext_resource type="Script" uid="uid://xaelip4t1qe1" path="res://pollen_mini_game/pollen_script/flower.gd" id="1_nageh"]
[ext_resource type="Texture2D" uid="uid://dmqt50rr6il8" path="res://pollen_mini_game/assets/flowers.png" id="2_w4con"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_nageh"]
radius = 92.0
height = 492.0

[node name="Flower" type="Node2D"]
script = ExtResource("1_nageh")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(9, 23)
scale = Vector2(13.8167, 13.8167)
texture = ExtResource("2_w4con")
hframes = 2
vframes = 6

[node name="PollenSpawn" type="Marker2D" parent="."]
position = Vector2(50, -201)

[node name="ReleasePollenTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="DetectPlayer" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectPlayer"]
shape = SubResource("CapsuleShape2D_nageh")

[connection signal="timeout" from="ReleasePollenTimer" to="." method="timer_time_out"]
[connection signal="body_entered" from="DetectPlayer" to="." method="_on_detect_player_body_entered"]
[connection signal="body_exited" from="DetectPlayer" to="." method="_on_detect_player_body_exited"]
